more play; getting ready for plugin update