@@ -1,3 +1,3 @@
 #!/bin/bash
 cd /home/ec2-user/forsawcraften 
-nohup java -Xmx1024M -Xms1024M -classpath "scala-library-2.10.2.jar:craftbukkit.jar" org.bukkit.craftbukkit.Main nogui &
+screen -c /dev/null -dmS minecraft java -Djava.ext.dirs="/usr/lib/jvm/jre/lib/ext:lib" -XX:MaxPermSize=128M -Xmx1024M -Xms1024M -jar spigot.jar nogui 
