@@ -1,2 +1,2 @@
 #!/bin/bash
-java -XX:MaxPermSize=128M -Xmx1024M -Xms1024M -classpath "scala-library-2.10.2.jar:spigot.jar" -jar spigot.jar
+java -Djava.ext.dirs=lib -XX:MaxPermSize=128M -Xmx1024M -Xms1024M -jar spigot.jar
